Fixing wrong paddings and margins and fixing grid columns template

--- a/frontend/fe-digital-booking/src/components/CategoryCard/CategoryCard.module.scss
+++ b/frontend/fe-digital-booking/src/components/CategoryCard/CategoryCard.module.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 100%;
     max-height: 205px;
+    min-width: 205px;
     object-fit: cover;
     object-position: bottom;
   }
